[project]
name = "navigator-api"
authors = [
    {name = "Jesus Lara G.", email = "jesuslarag@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9.0"
license = {file = "LICENSE"}
keywords = ["framework", "asyncio", "uvloop", "aiohttp", "navigator"]
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "License :: OSI Approved :: BSD License",
]
dynamic = ['version']

[build-system]
requires = [
    'setuptools >= 47',
    'wheel == 0.37.1',
    'Cython==0.29.32',
    'toml >= 0.10.2',
    'asyncio==3.4.3',
    'flit'
]

build-backend = "setuptools.build_meta"

[tool.flit.metadata]
module = "navigator"
author = "Jesus Lara Gimenez"
author-email = "jesuslarag@gmail.com"
home-page = "https://github.com/phenobarbital/navigator-api"
description-file = "README.md"
requires-python = ">=3.9.0"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]

filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]
