[build-system]
requires = [
    'setuptools==67.5.1',
    'wheel == 0.38.4',
    'Cython==0.29.33',
    'toml >= 0.10.2',
    'asyncio==3.4.3',
    'flit'
]
build-backend = "setuptools.build_meta"

[tool.flit.metadata]
module = "navigator"
author = "Jesus Lara G."
home-page = "https://github.com/phenobarbital/navigator"
requires-python = ">=3.9.16"
description-file = "README.md"
license = "LICENSE"
keywords = "framework, asyncio, uvloop, aiohttp, navigator"
classifiers=[
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "License :: OSI Approved :: BSD License",
]


[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]
