[metadata]
author = Jesus Lara
author_email = jlara@trocglobal.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
description = Navigator Web Framework based on aiohttp, with batteries included.
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD
license_file = file:LICENSE
name = navigator-api
project_urls =
    Source Code = https://github.com/phenobarbital/navigator-api
    Funding = https://paypal.me/phenobarbital
    Say Thanks= https://saythanks.io/to/phenobarbital
url = https://github.com/phenobarbital/navigator-api
version = file:VERSION
[options]
install_requires =
    wheel==0.36.2
    numpy >= 1.11.1
    asyncio==3.4.3
    aiohttp>=3.0.0,<4.0.0
    PyJWT==2.0.1
    setuptools==50.3.2
    sockjs==0.11.0
    python-dotenv==0.15.0
    isort==5.6.4
    black==20.8b1
    pydantic==1.7.1
    cchardet==2.1.7
    aiodns==2.0.0
    brotlipy==0.7.0
    pycares==3.1.1
    aiofile==3.1.1
    pylibmc==1.6.1
    aiojobs==0.2.2
    aiohttp-session==2.9.0
    aiohttp-jrpc==0.1.0
    cryptography==3.2.1
    aiohttp-cors==0.7.0
    uvloop==0.14.0
    objectpath==0.6.1
    aiohttp-debugtoolbar==0.6.0
    aiohttp-jinja2==1.3.0
    aiohttp-session==2.9.0
    aiohttp-utils==3.1.1
    aiohttp-swagger==1.0.15
    ujson==4.0.1
    aiosocks==0.2.6
    yapf==0.30.0
    isort==5.6.4
    black==20.8b1
    aiologstash==2.0.0
    python-logstash==0.4.6
    asyncdb>=1.1.0
    navconfig>=0.2.10
dependency_links=
    git+https://github.com/phenobarbital/asyncdb.git#egg=asyncdb
    git+https://github.com/phenobarbital/NavConfig.git@main#egg=navconfig
