[metadata]
name = navigator-api
author = Jesus Lara
author_email = jlara@trocglobal.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
description = Navigator Web Framework based on aiohttp, with batteries included.
long_description = file:README.md
long_description_content_type = text/markdown
license = BSD
project_urls =
    Source Code = https://github.com/phenobarbital/navigator-api
    Funding = https://paypal.me/phenobarbital
    Say Thanks= https://saythanks.io/to/phenobarbital
url = https://github.com/phenobarbital/navigator-api
version = file:VERSION
[options]
setup_requires =
    wheel==0.37.0
    Cython==0.29.21
install_requires =
    wheel==0.37.0
    Cython==0.29.21
    numpy >= 1.21.1
    asyncio==3.4.3
    uvloop==0.16.0
    aiohttp==3.7.4
    rapidjson==1.0.0
    python-rapidjson>=1.5
    PyJWT==2.1.0
    sockjs==0.11.0
    pydantic==1.8.2
    cchardet==2.1.7
    aiodns==3.0.0
    brotlipy==0.7.0
    aiofile==3.1.1
    aiojobs==0.2.2
    aiohttp-jrpc==0.1.0
    asn1crypto==1.4.0
    pycryptodome==3.9.9
    rncryptor==3.3.0
    aiohttp-cors==0.7.0
    objectpath==0.6.1
    aiohttp-debugtoolbar==0.6.0
    aiohttp-jinja2==1.3.0
    aioredis==2.0.0
    cryptography==3.4.7
    msal==1.17.0
    aiohttp-utils==3.1.1
    aiohttp-swagger==1.0.15
    aiohttp-sse==2.0.0
    aiosocks==0.2.6
    PySocks==1.7.1
    httpie==2.3.0
    yapf==0.30.0
    aiologstash==2.0.0
    aiogoogle==2.1.0
    okta-jwt-verifier==0.2.0
    python-logstash==0.4.6
dependency_links=
    git+https://github.com/phenobarbital/asyncdb.git#egg=asyncdb
    git+https://github.com/phenobarbital/NavConfig.git@main#egg=navconfig
